CAUSEWAY-4029: adds directional command movement actions